--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: QinBlog
 email: 1031219129@qq.com
 url: https://Qinxiaoshou.github.io
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "生活就是有动力的时候向上跑"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
@@ -10,7 +10,7 @@ color:
   links: '#219ab3'
 
 # Footer settings
-footer: Your Website
+footer: QinPeiZhou
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
