--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: QinBlog
 email: 1031219129@qq.com
 url: https://Qinxiaoshou.github.io
-description: "生活就是有动力的时候向上跑"
+description: "not thing is diffcult"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
