--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Hackerxu's Blog
+title: Qin's Blog
 email: 1031219129@qq.com
 description: "Python,HTML,CSS,Machine Leaning"
 permalink: /:year/:month/:day/:title.html
